--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <label for="partida">Partida:</label>
             <input type="text" id="partida" name="partida" required>
             
-            <label for="tipoEntrada">Tipo de Entrada:</label>
+            <label for="tipoEntrada">Bet:</label>
             <input type="text" id="tipoEntrada" name="tipoEntrada" required>
             
             <label for="valor">Valor:</label>
