--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Tela de Menu -->
     <div id="menu-container" class="hidden">
-        <h2>Menu Principal</h2>
+        <h2>Menu</h2>
         <div id="menu-buttons">
             <button id="register-bet">Registrar Bet</button>
             <button id="history-bet">Histórico de Bets</button>
